Fix the scrollbar
Actually, the margin-top seems to be needed on Windows only

--- a/live/airootfs/opt/install/rootfs/etc/skel/.mozilla/firefox/default/chrome/userChrome.css
+++ b/live/airootfs/opt/install/rootfs/etc/skel/.mozilla/firefox/default/chrome/userChrome.css
@@ -1,3 +1,2 @@
 #TabsToolbar {visibility: collapse;}
 #navigator-toolbox {visibility: collapse;}
-browser {margin-top: 8px;}
